# open-extract

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  working.ipynb
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
data/mds/: 1.md  2.md  3.md  4.md  5.md
modelfile/: Modelfile_15k_r1  Modelfile_64k_r1
notebooks/: exp10_cot_question_breakdown.ipynb  exp1_text_based_llama3.ipynb  exp2_llama3.2-vision.ipynb  exp3_text_based_llama3_qualitative.ipynb  exp4_new_preprocessors.ipynb  exp5_screening.ipynb  exp6_QA.ipynb  exp7_QA_openai.ipynb  exp9_screening_updates.ipynb  export_qas_exp6-7.ipynb
notebooks/exp8_screening_validation/: exp8_screening_validity.ipynb  screening_validations.csv
open_extract/: app.py  data_io.py  data_model.py  external.py  llm.py  preprocess.py  templates.py
runs/250122_llama3.2-vision/: Assessing causes of yield gaps in agricultural areas with diversity in climate and soils.json  Defining Optimal Soybean Sowing Dates across the US.json  Planting Date and Maturity Groups Effects on Soybean Yield in Wisconsin.json  Planting Date, Maturity, and Temperature Effects on Soybean Seed Yield and Composition.json
runs/250122_text_based_llama3.3/: Assessing causes of yield gaps in agricultural areas with diversity in climate and soils.json  Defining Optimal Soybean Sowing Dates across the US.json  Planting Date and Maturity Groups Effects on Soybean Yield in Wisconsin.json  Planting Date, Maturity, and Temperature Effects on Soybean Seed Yield and Composition.json  (+1 more)
(+5 files in other folders)
