[project]
name = "open-extract"
version = "0.1.0"
description = "Extract structural data from PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "llama-parse>=0.5.19",
    "ollama>=0.4.7",
    "pymupdf>=1.25.2",
    "streamlit>=1.41.1",
    "tqdm>=4.67.1",
]
