[project]
name = "open-extract"
version = "0.1.0"
description = "Extract structural data from PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "llama-parse>=0.5.20",
    "markitdown>=0.0.1a3",
    "ollama>=0.4.7",
    "openparse>=0.7.0",
    "pymupdf>=1.25.2",
    "pymupdf4llm>=0.0.17",
    "tqdm>=4.67.1",
]
